[package]
name = "callander-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
actix-cors = "0.6"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
uuid = { version = "1", features = ["v4", "serde"] }
r2d2 = "0.8"
lazy_static = "1.4"
env_logger = "0.10"
ts-rs = "6.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
