[package]
name = "callander-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
actix-cors = "0.6"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }
r2d2 = "0.8.9"
lazy_static = "1.4"
env_logger = "0.10"
ts-rs = "6.2"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4"
futures-util = "0.3.26"
jwksclient2 = "0.2.0"
async-trait = "0.1.66"
jsonwebtoken = "8"
jwks_client_rs = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2.1"
tokio = { version = "1", features = ["full"] }
http-cache-reqwest = "0.8.0"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "callander-rust"
path = "src/main.rs"
